{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 8,
  "lineage": "43be1d09-73de-2c08-647c-b3a3671840cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-02691e4b2a154860b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02691e4b2a154860b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045b432831409e9df",
            "private_dns": "ip-172-31-8-80.ec2.internal",
            "private_ip": "172.31.8.80",
            "public_dns": "ec2-18-213-247-59.compute-1.amazonaws.com",
            "public_ip": "18.213.247.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037019c887c238020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be9c58aecb77905",
            "tags": {
              "Name": "For-Each-Demo-us-east-1a"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-0f891f8636d63b9e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f891f8636d63b9e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1fd9dc2853c218a",
            "private_dns": "ip-172-31-88-223.ec2.internal",
            "private_ip": "172.31.88.223",
            "public_dns": "ec2-44-204-67-208.compute-1.amazonaws.com",
            "public_ip": "44.204.67.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06fd9762a336357bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edb1da162304aaee",
            "tags": {
              "Name": "For-Each-Demo-us-east-1b"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-0344a27d9edf65804",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0344a27d9edf65804",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046a64b357adf9972",
            "private_dns": "ip-172-31-25-198.ec2.internal",
            "private_ip": "172.31.25.198",
            "public_dns": "ec2-54-242-53-93.compute-1.amazonaws.com",
            "public_ip": "54.242.53.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021d8d482cf2c8fd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0720380c59b350122",
            "tags": {
              "Name": "For-Each-Demo-us-east-1c"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-02f2c71e1894f2023",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f2c71e1894f2023",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ccb14a5b8193aa0",
            "private_dns": "ip-172-31-42-239.ec2.internal",
            "private_ip": "172.31.42.239",
            "public_dns": "ec2-54-145-35-167.compute-1.amazonaws.com",
            "public_ip": "54.145.35.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f1d14537142aec4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb6fe7b5a07f572e",
            "tags": {
              "Name": "For-Each-Demo-us-east-1d"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        },
        {
          "index_key": "us-east-1e",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-08a1d5af3bbaa3b8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a1d5af3bbaa3b8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3474710f965b4f1",
            "private_dns": "ip-172-31-52-19.ec2.internal",
            "private_ip": "172.31.52.19",
            "public_dns": "ec2-54-152-150-220.compute-1.amazonaws.com",
            "public_ip": "54.152.150.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2c3b9520dae00c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010a6e8924d7d5dac",
            "tags": {
              "Name": "For-Each-Demo-us-east-1e"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1e"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:643077234078:instance/i-0254c9bfa83ac9d3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0254c9bfa83ac9d3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f14fa6e8e6761d71",
            "private_dns": "ip-172-31-64-104.ec2.internal",
            "private_ip": "172.31.64.104",
            "public_dns": "ec2-44-200-188-111.compute-1.amazonaws.com",
            "public_ip": "44.200.188.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a040ed2e493f5af2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0090c66e8433bd99b",
            "tags": {
              "Name": "For-Each-Demo-us-east-1f"
            },
            "tags_all": {
              "Name": "For-Each-Demo-us-east-1f"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe2b9c2e6f95de6",
              "sg-0bf79abedc7251f3d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.myami",
            "data.aws_availability_zones.my_azones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643077234078:security-group/sg-0bf79abedc7251f3d",
            "description": "allowing ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf79abedc7251f3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "643077234078",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616f27eb0c702510"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643077234078:security-group/sg-05fe2b9c2e6f95de6",
            "description": "allowing ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe2b9c2e6f95de6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "643077234078",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616f27eb0c702510"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}